# BodyTracking

./: .gitignore  .gitignore.orig  .gitmodules  README.md  branch for data recording.txt
BodyModel/: .gitignore  README.md  initTransAndRot_1504179231.csv  initTransAndRot_1504264185.csv  korefile.js  positionData_1504179231.csv  positionData_1504264185.csv
BodyModel/Deployment/: PrecisionEvaluation_1596463735.csv  avatar.blend  bend_forward.csv  calibratePuppet.csv  crouch.csv  cube.blend  cube.ogex  elbow_flexion.csv  elbow_flexion1.csv  elbow_flexion3.csv  evaluationConfig_1532970345.csv  evaluationData_1532970345.csv  evaluationData_1532970526.csv  evaluationData_1532970834.csv  evaluationData_1532971059.csv  hand_pronation.csv  hand_pronation1.csv  hands.csv  hands2.csv  hip_flexion.csv  hip_flexion2.csv  initTransAndRot.csv  initTransAndRot_1504264185.csv  initTransAndRot_1506685997.csv  initTransAndRot_1506695407.csv  initTransAndRot_1507885452.csv  initTransAndRot_1509715955.csv  initTransAndRot_1509716042.csv  initTransAndRot_1509716248.csv  initTransAndRot_1509716355.csv  initTransAndRot_1509716603.csv  initTransAndRot_1511179086.csv  joggen-1.csv  (+116 more)
EvaluationTool/: .gitignore  README.md  config.json  import.js  json.txt  package.json
HMM_Trainer/: .gitignore  README.md
InverseKinematicsAnalysisTool/: .eslintignore  .eslintrc  import.js  package.json  run.sh
LatencyMeasurementTool/: .gitignore  CMakeLists.txt  READ.txt  main.cpp
LatencyMeasurementTool/include/: LatencyTool.cpp  LatencyTool.h  Peak.cpp  Peak.h
Tracking/: Yoga_Krieger_4_HMM.txt
(+14043 files in other folders)
