cmake_minimum_required(VERSION 3.0)
project( LatencyMeasurementTool )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} include )
set( SOURCE_FILES main.cpp include/LatencyTool.h include/LatencyTool.cpp )
add_executable( main ${SOURCE_FILES} )
target_link_libraries( main ${OpenCV_LIBS} )